--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <div class="promo-block-divider">
-                            <h1 class="promo-block-title">Kovalik <br/> Nazar</h1>
+                            <h1 class="promo-block-title">Kovalyk <br/> Nazar</h1>
                             <p class="promo-block-text">Web Designer &amp; Front-end Developer</p>
                         </div>
                         <ul class="list-inline">
